--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             // Restart game
             function new_game()
             {
-                window.open('Wordle.html?level=' + document.querySelector('input[name="grade_level"]:checked').value, '_self');
+                window.open('?level=' + document.querySelector('input[name="grade_level"]:checked').value, '_self');
             }
 
             // Backspace function
