--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
                 var seen_words = getCookie('words');
                 correct_word = '';
+                window.alert(seen_words);
                 
                 while (correct_word == '') {
                     // Get new answer
