--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 <input type="radio" id="radio_2" name="grade_level" value="2" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_2">1st Year</label>&nbsp;&nbsp;
                 <input type="radio" id="radio_3" name="grade_level" value="3" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_3">2nd Year</label>&nbsp;&nbsp;
                 <input type="radio" id="radio_4" name="grade_level" value="4" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_4">3rd Year</label>&nbsp;&nbsp;
-                <input type="radio" id="radio_5" name="grade_level" value="5" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_5">All</label>&nbsp;&nbsp;
+                <!--<input type="radio" id="radio_5" name="grade_level" value="5" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_5">All</label>&nbsp;&nbsp;-->
                 <span id="rules_open_box" onclick="open_close_popup('rules');">?</span>
             </div>
             <script>
