--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 }
 
                 // See the answer for testing
-                window.alert(correct_word + " | " + word_list.length);
+                //window.alert(correct_word + " | " + word_list.length);
             }
 
             // Used to choose a random word
