--- a/index.html
+++ b/index.html
@@ -471,11 +471,11 @@
             <div class="page_title" lang="ja">英語 <ruby>WORDLE<rt>ワードル</rt></ruby></div>
             <form>
             <div style="text-align: center; padding:10px;" class="radio_levels">
-                <input type="radio" id="radio_1" name="grade_level" value="1" onclick="change_grade(this.value)" onload="default_grade_button(this)"/><label for="radio_1">ES</label>&nbsp;&nbsp;
-                <input type="radio" id="radio_2" name="grade_level" value="2" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_2">1st Year</label>&nbsp;&nbsp;
-                <input type="radio" id="radio_3" name="grade_level" value="3" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_3">2nd Year</label>&nbsp;&nbsp;
-                <input type="radio" id="radio_4" name="grade_level" value="4" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_4">3rd Year</label>&nbsp;&nbsp;
-                <input type="radio" id="radio_5" name="grade_level" value="5" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_5" title="英語を母国語とするレベル">English Master</label>&nbsp;&nbsp;
+                <input type="radio" id="radio_1" name="grade_level" value="1" onclick="change_grade(this.value)" onload="default_grade_button(this)"/><label for="radio_1" title="小学校６年生向け">ES</label>&nbsp;&nbsp;
+                <input type="radio" id="radio_2" name="grade_level" value="2" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_2" title="中学校１年生向け">JHS 1</label>&nbsp;&nbsp;
+                <input type="radio" id="radio_3" name="grade_level" value="3" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_3" title="中学校２年生向け">JHS 2</label>&nbsp;&nbsp;
+                <input type="radio" id="radio_4" name="grade_level" value="4" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_4" title="中学校３年生向け">JHS 3</label>&nbsp;&nbsp;
+                <input type="radio" id="radio_5" name="grade_level" value="5" onclick="change_grade(this.value)" onload="default_grade_button(this)" /><label for="radio_5" title="英語を母国語とする人向け">English Master</label>&nbsp;&nbsp;
                 <span id="rules_open_box" onclick="open_close_popup('rules');">?</span>
             </div>
             <script>
